pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidGlobImport1.pkl
import* "{foo{bar}}.pkl" as invalidGlob

res = invalidGlob
